--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "xcpc-statement-generator",
+  "name": "xcpc-statement-gen",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/v5-patch-for-react-19": "^1.0.3",
-    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@mr.python/promise-worker-ts": "^1.0.0",
+    "@myriaddreamin/typst-ts-renderer": "^0.6.1-rc5",
+    "@myriaddreamin/typst-ts-web-compiler": "^0.6.1-rc5",
+    "@myriaddreamin/typst.ts": "^0.6.1-rc5",
     "antd": "^6.0.0",
+    "axios": "^1.13.2",
+    "fontkit": "^2.0.4",
+    "lodash": "^4.17.21",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "use-immer": "^0.11.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4",
     "vite": "npm:rolldown-vite@7.2.5"
   },
   "overrides": {
