--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
+    "@monaco-editor/react": "^4.7.0",
     "@mr.python/promise-worker-ts": "^1.0.0",
     "@myriaddreamin/typst-ts-renderer": "^0.6.1-rc5",
     "@myriaddreamin/typst-ts-web-compiler": "^0.6.1-rc5",
